--- a/static/style_320_portrait.css
+++ b/static/style_320_portrait.css
@@ -8,16 +8,20 @@
 }
 
 body {
+    display: flex;
+    align-items: center;
     width: 100vw;
     height: 100vh;
 }
 
 .cont_one {
-    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1 {
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 form {
