--- a/static/style_320_portrait.css
+++ b/static/style_320_portrait.css
@@ -22,12 +22,12 @@ body {
 
 h1 {
     font-size: 1.5rem;
+    font-weight: 900;
 }
 
 form {
     display: flex;
     flex-direction: column;
-    background-color: blueviolet;
     align-items: center;
 }
 
@@ -43,5 +43,5 @@ form {
 input:not([type=submit]) {
     width: 92%;
     height: 2rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
