--- a/static/style_home_320_portrait.css
+++ b/static/style_home_320_portrait.css
@@ -1,13 +1,30 @@
 @charset "utf-8";
 
 .button {
+    position: relative;
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 300px;
     height: 70px;
     border-radius: 10px 100px;
-    background-color: rgb(252, 31, 31);
+    background-color: rgb(0, 0, 0);
+    z-index: 7;
+    transform: rotate(5deg);
+}
+
+.button::before {
+    position: absolute;
+    top: -7px;
+    left: 3px;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 0, 0);
+    border-radius: 10px 100px;
+    z-index: 0;
+    color: white;
+    font-size: 1.5rem;
 }
 
 li {
@@ -21,9 +38,12 @@ a {
 }
 
 span {
+    position: absolute;
+    top: 0px;
     color: white;
     font-size: 1.5rem;
     max-width: 150px;
     text-align: center;
+    transform: rotate(-5deg);
 }
 
