--- a/templates/cad_clientes.html
+++ b/templates/cad_clientes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Cliente</title>
-    <link rel="stylesheet" href="static/style_320_portrait.css" media="(min-width: 320px) and (orientation: portrait)">
+    <link rel="stylesheet" href="../static/style_320_portrait.css" media="(min-width: 320px) and (orientation: portrait)">
 </head>
 <body>
     <div class="cont_one">
@@ -19,6 +19,9 @@
             </div>
             <div class="cont_ter">
                 <input type="submit" value="Cadastrar">
+                <a href="../index.html">
+                    Voltar a Página Inicial
+                </a>
             </div>
         </form>
     </div>
