--- a/templates/cad_clientes.html
+++ b/templates/cad_clientes.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cont_one">
         <h1>CLIENTES</h1>
-        <form action="/cad_cli" method="post">
+        <form action="/cad_clientes" method="post">
             <div class="cont_sec">
                 <input type="text" name="cod_cli" id="idcod_cli" placeholder="ID.">
                 <input type="text" name="nome" id="idnome" placeholder="Nome">
@@ -19,7 +19,7 @@
             </div>
             <div class="cont_ter">
                 <input type="submit" value="Cadastrar">
-                <a href="../index.html">
+                <a href="/">
                     Voltar a Página Inicial
                 </a>
             </div>
