--- a/templates/cad_produtos.html
+++ b/templates/cad_produtos.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cont_one">
         <h1>PRODUTOS</h1>
-        <form action="/cad_pro" method="post">
+        <form action="/cad_produtos" method="post">
             <div class="cont_sec">
                 <input type="text" name="codigo" id="idcodigo" placeholder="Código">
                 <input type="text" name="descricao" id="iddescricao" placeholder="Descrição">
@@ -18,7 +18,7 @@
             </div>
             <div class="cont_ter">
                 <input type="submit" value="Cadastrar">
-                <a href="../index.html">
+                <a href="/">
                     Voltar a Página Inicial
                 </a>
             </div>
