--- a/templates/cad_vendas.html
+++ b/templates/cad_vendas.html
@@ -10,11 +10,11 @@
     <div class="cont_one">
         <h1>BEM-VINDO</h1>
         <h3>Cadastro de Vendas</h3>
-        <form action="/cad_venda" method="post">
+        <form action="/cad_vendas" method="post">
             <div class="cont_sec">
-                <input type="text" name="cod" id="idcod" placeholder="Código da Venda">
+                <input type="text" name="codigo" id="idcodigo" placeholder="Código da Venda">
                 <input type="text" name="cliente" id="idcliente" placeholder="Cliente">
-                <input type="text" name="cod_pro" id="idcod_pro" placeholder="Código do Produto">
+                <input type="text" name="cod_produto" id="idcod_produto" placeholder="Código do Produto">
                 <input type="text" name="produto" id="idproduto" placeholder="Descrição">
                 <input type="text" name="preco" id="idpreco" placeholder="Preço">
                 <input type="text" name="quantidade" id="idquantidade" placeholder="QTDE.">
@@ -22,7 +22,7 @@
             </div>
             <div class="cont_ter">
                 <input type="submit" value="Cadastrar">
-                <a href="../index.html">
+                <a href="/">
                     Voltar a Página Inicial
                 </a>
             </div>
