--- a/templates/index.html
+++ b/templates/index.html
@@ -14,21 +14,21 @@
         <div class="cont_sec">
             <ul>
                 <li>
-                    <a href="templates/cad_vendas.html">
+                    <a href="/cad_vendas">
                         <div class="button button-3">
                             <span>Cadastro de Vendas</span>
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="templates/cad_clientes.html">
+                    <a href="/cad_clientes">
                         <div class="button button-3">
                             <span>Cadastro de Clientes</span>
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="templates/cad_produtos.html">
+                    <a href="/cad_produtos">
                         <div class="button button-3">
                             <span>Cadastro de Produtos</span>
                         </div>
