--- a/templates/cad_clientes.html
+++ b/templates/cad_clientes.html
@@ -5,17 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Cliente</title>
     <link rel="stylesheet" href="../static/style_320_portrait.css" media="(min-width: 320px) and (orientation: portrait)">
+    <script>
+
+        function setvalor(){
+
+        const dado = document.getElementById('idcod_cli')
+        dado.value = "{{codigo}}"
+
+        }
+
+        window.onload = function() {
+            setvalor();
+        }
+    </script>
+    
 </head>
 <body>
     <div class="cont_one">
         <h1>CLIENTES</h1>
-        <form action="/cad_clientes" method="post">
+        <form action="/cad_clientes" method="post" oninput="setvalor()">
             <div class="cont_sec">
                 <input type="text" name="cod_cli" id="idcod_cli" placeholder="ID.">
-                <input type="text" name="nome" id="idnome" placeholder="Nome">
+                <input type="text" name="nome" id="idnome" placeholder="Nome" >
                 <input type="text" name="sobrenome" id="idsobrenome" placeholder="Sobrenome">
                 <input type="text" name="endereco" id="idendereco" placeholder="Endereço">
-                <input type="text" name="telefone" id="idtelefone" placeholder="Telefone">
+                <input type="text" name="telefone" id="idtelefone" placeholder=Telefone>
             </div>
             <div class="cont_ter">
                 <input type="submit" value="Cadastrar">
